testsuite/tests/partial-sigs/should_fail/PatBind3.stderr

PatBind3.hs:6:12: error:
    • Couldn't match type ‘(Bool, t)’ with ‘Char’
      Expected type: Maybe ((Bool, t) -> Char)
        Actual type: Maybe ((Bool, t) -> (Bool, t))
    • In the expression: Just id
      In a pattern binding: Just foo = Just id
    • Relevant bindings include
        foo :: (Bool, t) -> Char (bound at PatBind3.hs:6:6)
